--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-torch==1.13.0
-torchvision==0.14.0
-numpy==1.23.1
+torch
+torchvision
+numpy
 opencv-python==4.6.0.66
 matplotlib==3.5.2
 jsonschema==4.4.0
-scikit-image==0.19.3
-pillow==9.2.0
+scikit-image
+pillow
+matplotlib
+albumentations
