--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 torch
 torchvision
 numpy
-opencv-python==4.6.0.66
+opencv-python
 matplotlib==3.5.2
 jsonschema==4.4.0
 scikit-image
 pillow
 matplotlib
-albumentations
